pull the readme

--- a/en/pages/product_detail01.html
+++ b/en/pages/product_detail01.html
@@ -120,6 +120,12 @@
         <img src="../../img/detail_picture01.png" class="img-responsive absolute-left"/>
       </div>
     </div> 
+
+    <div class="row phone-show">
+      <div class="phone-pic">
+        <img src="../../img/detail_picture01.png" class="img-responsive"/>
+      </div>
+    </div>
     
     <div class="row">
       <div class="col-sm-12">
