--- a/en/pages/product_detail05.html
+++ b/en/pages/product_detail05.html
@@ -119,7 +119,13 @@
         <h3 class="text-center">Remote ECG/BP Analysis Platform</h3>
         <img src="../../img/detail_picture05.png" class="img-responsive absolute-left"/>
       </div>
-    </div> 
+    </div>
+
+    <div class="row phone-show">
+      <div class="phone-pic">
+        <img src="../../img/detail_picture05.png" class="img-responsive"/>
+      </div>
+    </div>
     
     <div class="row">
       <div class="col-sm-12">
