--- a/pages/product_detail01.html
+++ b/pages/product_detail01.html
@@ -119,7 +119,13 @@
         <h3 class="text-center">智能动态心电图分析系统</h3>
         <img src="../img/detail_picture01.png" class="img-responsive absolute-left"/>
       </div>
-    </div> 
+    </div>
+
+    <div class="row phone-show">
+      <div class="phone-pic">
+        <img src="../img/detail_picture01.png" class="img-responsive"/>
+      </div>
+    </div>
     
     <div class="row">
       <div class="col-sm-12">
