update the honor

--- a/about.html
+++ b/about.html
@@ -124,15 +124,21 @@
         <h4><b>资质与荣誉</b></h4>
       </div>      
       <div class="col-sm-12">
-		    <p class="text-indent">
-			    杭州百慧医疗设备有限公司是一家以浙江大学为技术和人才依托，专业从事医疗器械行业，集研发、生产、销售及服务为一体的高新技术企业。公司已获得由德国权威认证机构TUV Rheinland颁发的ISO9001和ISO13485质量体系证书以及CE证书。
-		    </p>
-		    <p class="text-indent">
-			    公司现在拥有一支高效专业的研发及技术团队，其中拥有博士学历的员工占70%，拥有硕士学历的占30%，均为浙江大学生物医学工程专业历年人才之精华。最令百慧同仁引以为荣的是，团队的核心技术已成功应用于国家载人航天工程。基于该技术的“航天员生理参数监护系统”将随“天宫一号”遨游太空，为航天员提供生理参数监测。
-		    </p>
-		    <p class="text-indent">
-			    百慧产品以“高端设计理念，严格质量保障”为指导思想，采用先进器件，关注每一个细节，以航天标准规范进行设计、生产和测试，各项指标目前均处于国际先进水平。青年锐志的优秀才俊，立志于打造中国乃至世界一流的医疗电子设备，实现“为更多人提供优质医疗”的公司愿景。
-		    </p>
+		    <div>
+          <p><b>资质</b></p>
+          <ul>
+            <li>医疗器械生产许可证</li>
+            <li>中华人民共和国医疗器械注册证</li>
+            <li>TUV认证：The Certification Body of TUV Rheinland LGA Products GmbH</li>
+            <li>EC认证: EC Certificate Directive 93/42/EEC Annex V Production Quality Assurance Medical Devices</li>
+          </ul>
+        </div>
+		    <div>
+          <p><b>荣誉</b></p>
+          <ul>
+            <li>杭州市高新技术企业</li>            
+          </ul>
+        </div>		    
 	    </div>
     </div> 
   </div>
