--- a/en/about.html
+++ b/en/about.html
@@ -133,23 +133,21 @@
         <h4><b>Qualification and Honor</b></h4>
       </div>      
       <div class="col-sm-12">
-		    <p class="text-indent">
-			    Hangzhou Beneware Medical Equipment Co.,Ltd is a high-tech enterprises based on Zhejiang University for the technical and personnel support,
-			    specializing in medical equipment industry, set research and development, production, sales and service. 
-          Our company has been awarded by the German authority certification of ISO9001 & ISO13485 & CE certificate auditted by TUV.
-        </p>
-		    <p class="text-indent">
-			    Now our company has a highly efficient professional R & D team, 
-			    70% has a doctoral degree and 30% has a master's degree from biomedical engineering colleage of Zhejiang University. 
-			    The most grateful is that our team's core technology has been successfully applied in the national space project. 
-			    Based on the technology of the "astronauts physiological parameters of the monitoring system" was used in the "Tiangong No.1"
-          travel space to monitor the astronauts physiological parameters.
-        </p>
-		    <p class="text-indent">
-			    Our products was made under the idea of "high-end design in technology, strict quality control in production", 
-			    we insist to use advanced devices, pay attention to every step and details, use the aerospace standard in design, production and testing. 
-		      The indicators are currently in the international advanced level. Young Reiz excellent talent, determined to build China and even world-class medical electronic equipment, to achieve "for more people to provide quality medical care," the company's vision.
-		    </p>
+		    <div>
+          <p><b>Qualification</b></p>
+          <ul>
+            <li>Production Certificate For Medical Device: 医疗器械生产许可证</li>
+            <li>Registration Certificate For Medical Device: 中华人民共和国医疗器械注册证</li>
+            <li>The Certification Body of TUV Rheinland LGA Products GmbH</li>
+            <li>EC Certificate Directive 93/42/EEC Annex V Production Quality Assurance Medical Devices</li>
+          </ul>
+        </div>
+		    <div>
+          <p><b>Honor</b></p>
+          <ul>
+            <li>High-Tech Company of Hangzhou City</li>            
+          </ul>
+        </div>	
 	    </div>
     </div>   
   </div>
