decrease the size of images with tinypng

--- a/en/cert.html
+++ b/en/cert.html
@@ -15,7 +15,6 @@
 <!--[if lt IE 9]>
    <script src="../js/respond.min.js"></script>
 <![endif]-->
-
 </head>
 <body>  
 	<nav class="navbar navbar-fixed-top" id="navbar">
@@ -97,18 +96,20 @@
       </div>      
     </div>
 		<hr />
-		<div class="row cert-pic">
-			<div class="col-sm-3"></div>
-			<div class="col-sm-2"><img src="../img/cert.jpg" class="img-responsive center-block"/></div>
-			<div class="col-sm-2"><img src="../img/cert.jpg" class="img-responsive center-block"/></div>
-			<div class="col-sm-2"><img src="../img/cert.jpg" class="img-responsive center-block"/></div>
-		</div>
-		<div class="row cert-pic">
-			<div class="col-sm-3"></div>
-			<div class="col-sm-2"><img src="../img/cert.jpg" class="img-responsive center-block"/></div>
-			<div class="col-sm-2"><img src="../img/cert.jpg" class="img-responsive center-block"/></div>
-			<div class="col-sm-2"><img src="../img/cert.jpg" class="img-responsive center-block"/></div>
-		</div>
+    <div class="row cert-pic">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-2"><a href="../img/licence-0.jpg" target="_blank"><img src="../img/licence-0.jpg" class="img-responsive center-block"/></a></div>
+        <div class="col-sm-2"><a href="../img/licence.jpg" target="_blank"><img src="../img/licence.jpg" class="img-responsive center-block"/></a></div>
+        <div class="col-sm-2"><a href="../img/licence-holter.jpg" target="_blank"><img src="../img/licence-holter.jpg" class="img-responsive center-block"/></a></div>
+        <div class="col-sm-2"><a href="../img/licence-ecg.jpg" target="_blank"><img src="../img/licence-ecg.jpg" class="img-responsive center-block"/></a></div>
+      </div>
+      <div class="row cert-pic">
+        <div class="col-sm-2"></div>		
+        <div class="col-sm-2"><a href="../img/licence-eec.jpg" target="_blank"><img src="../img/cert-eec.jpg" class="img-responsive center-block"/></a></div>
+        <div class="col-sm-2"><a href="../img/licence-tua.jpg" target="_blank"><img src="../img/cert-tua.jpg" class="img-responsive center-block"/></a></div>
+        <div class="col-sm-2"><a href="../img/licence-production.jpg" target="_blank"><img src="../img/licence-production.jpg" class="img-responsive center-block"/></a></div>
+        <div class="col-sm-2"><a href="../img/high-tech.jpg" target="_blank"><img src="../img/high-tech.jpg" class="img-responsive center-block"/></a></div>
+      </div>
       
   </div>
 	
