--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
   <meta name="description" content="专业的动态心电分析系统生产厂商,打造世界领先的3导/12导智能分析Holter,联系电话：0571-89811068" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="icon" href="img/beneware.png" />
-  <link rel="stylesheet" href="https://at.alicdn.com/t/font_474306_lszp2bxv3jl9pb9.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/font_474306_irx45csptfyldi.css">
   <!-- 引入样式 -->  
   <link rel="stylesheet" href="./css/admin.css">
   <!-- 先引入 Vue -->
@@ -174,6 +174,11 @@
         <button type="button" @click="onLogin">立即登录</button>
       </div>
       <div class="tip">
+        <p class="center success">
+          <label><input type="checkbox" v-model="isRemember" @change="setRemember"/>记住账号和密码</label>
+        </p>
+      </div>
+      <div class="tip">
         <p class="center">{{loginTip}}</p>
       </div>
       <p class="stamp center">
@@ -193,6 +198,7 @@ Vue.component('login',{
       usercode: '',
       verifyCode: '',
       loginTip: '',
+      isRemember: false
     }
   },
   methods: {
@@ -236,6 +242,11 @@ Vue.component('login',{
           this.loginTip = '验证码错误';
         }else{
           this.loginTip = '正在登录';
+          if(this.isRemember){
+            this.rememberAccount(this.username, this.password);
+          }else{
+            this.clearAccount();
+          }
           this.verifyAccount(this.username.toLowerCase(), this.password);
         }
       }else{
@@ -255,13 +266,36 @@ Vue.component('login',{
         }
       }.bind(this))
     },
+    rememberAccount(username, password){
+      let info = {
+        u: username,
+        p: password,
+        t: +new Date()
+      }
+      localStorage.setItem('beneAccount', JSON.stringify(info));
+    },
+    clearAccount(){
+      localStorage.setItem('beneAccount', '');
+    },
     rememberLoginStatus () {
       sessionStorage.clear();
       sessionStorage.setItem('benewarex',Math.random());
     },
+    setRemember(){
+      localStorage.setItem('benewareAdmin',this.isRemember);
+    }
   },
   mounted () {
     this.bornCode();
+    if(localStorage.getItem('benewareAdmin') != undefined){
+      this.isRemember = localStorage.getItem('benewareAdmin')==='true';
+    }
+    if(this.isRemember && localStorage.getItem('beneAccount')){
+      let info = JSON.parse(localStorage.getItem('beneAccount'));
+      this.username = info['u'];
+      this.password = info['p'];
+      this.usercode = this.verifyCode;
+    }
   }
 })
 </script>
@@ -287,7 +321,7 @@ Vue.component('login',{
         <div v-if="isModalShow">
           <my-modal :content="modalContent" :status="modalStatus"></my-modal>
         </div>        
-        <div class="contact" v-if="activeIndex==1">
+        <div class="contact" v-if="activeIndex==1" id="contact">
           <my-header :lang="language" @setlang="setLang">
             <p class="center"><big>联系方式列表</big><button @click="toAddNew" class="add">+new</button></p>
           </my-header>
@@ -322,7 +356,7 @@ Vue.component('login',{
               </div>
         </div>
 
-            <div class="news" v-if="activeIndex==2">              
+            <div class="news" v-if="activeIndex==2" id="news">              
               <my-header :lang="language" @setlang="setLang">
                 <p class="center"><big>新闻事件列表</big><button @click="toAddNew" class="add">+new</button></p>
               </my-header>
@@ -357,7 +391,7 @@ Vue.component('login',{
               </div>
             </div>
 
-            <div class="history" v-if="activeIndex==3">
+            <div class="history" v-if="activeIndex==3" id="history">
               <my-header :lang="language" @setlang="setLang">
                 <p class="center"><big>历史事件列表</big><button @click="toAddNew" class="add">+new</button></p>
               </my-header>
@@ -392,7 +426,7 @@ Vue.component('login',{
                 </div>                
             </div>
 
-            <div class="history" v-if="activeIndex==4">
+            <div class="history" v-if="activeIndex==4" id="message">
               <my-header :lang="language" @setlang="setLang"></my-header>
                 <p class="center"><big>网站留言列表</big></p>
               </my-header>
