--- a/news.html
+++ b/news.html
@@ -218,7 +218,7 @@
         },  
         /*获取列表信息： 各种*/      
         getLists () {          
-          this.postData('./index.php/admin/getLists/news', {lang:'cn'}, function(request){
+          this.postData('./ci/index.php/admin/getLists/news', {lang:'cn'}, function(request){
             if (request && request.responseText) {
               this.newsLists = JSON.parse(request.responseText);
             }else{
